--- a/.github/workflows/link-issue-to-pr.yml
+++ b/.github/workflows/link-issue-to-pr.yml
@@ -25,12 +25,11 @@ jobs:
             const pr = context.payload.pull_request;
             const title = pr.title;
 
-            // Match any “BD-” followed by one or more digits, e.g. BD-1 or BD-123456789
+            // Match BD-NUM (no brackets required, number can be long)
             const match = title.match(/BD-(\d+)/);
             if (!match) return;
 
-            const tag  = `BD-${match[1]}`;        // BD-1234
-            const tagWithBrackets = `[${tag}]`;    // [BD-1234]
+            const tag = `BD-${match[1]}`;
 
             // Step 1 – find the matching open issue
             const { data: issues } = await github.rest.issues.listForRepo({
@@ -39,9 +38,7 @@ jobs:
               state: 'open'
             });
 
-            const issue = issues.find(i =>
-              i.title.includes(tagWithBrackets) || i.title.includes(tag)
-            );
+            const issue = issues.find(i => i.title.includes(tag));
             if (!issue) return;
 
             // Step 2 – check for an existing “Fixes #N” comment
