--- a/.github/workflows/link-issue-to-pr.yml
+++ b/.github/workflows/link-issue-to-pr.yml
@@ -1,10 +1,8 @@
-# Links pull requests to matching issues when PR titles contain one or more [BD-####] tags.
 name: Link PR to Matching Issue
 
 on:
   pull_request:
-    # Add more types if needed, but only the minimum required for each job in the workflow.
-    types: [opened, edited, synchronize]  # 'edited' covers title/body changes
+    types: [opened, edited, synchronize]
 
 jobs:
   link-issue:
@@ -24,21 +22,40 @@ jobs:
           script: |
             const pr = context.payload.pull_request;
             const prTitle = pr.title;
+            const match = prTitle.match(/\[BD-(\d+)\]/);
+            if (!match) return;
 
-            // Find all [BD-####] tags in the PR title
-            const matches = [...prTitle.matchAll(/\[BD-(\d+)\]/g)];
-            if (matches.length === 0) {
-              console.log("No [BD-####] tags found in PR title");
-              return;
-            }
+            const tag = `BD-${match[1]}`;
 
-            // Fetch open issues once
+            // Step 1: Find matching open issue
             const { data: issues } = await github.rest.issues.listForRepo({
               owner: context.repo.owner,
               repo: context.repo.repo,
               state: "open"
             });
 
-            // Fetch existing PR comments once
+            const matchedIssue = issues.find(issue =>
+              issue.title.includes(`[${tag}]`)
+            );
+            if (!matchedIssue) return;
+
+            // Step 2: Check existing comments
             const { data: comments } = await github.rest.issues.listComments({
               owner: context.repo.owner,
+              repo: context.repo.repo,
+              issue_number: pr.number,
+            });
+
+            const alreadyCommented = comments.some(comment =>
+              comment.body.includes(`Fixes #${matchedIssue.number}`)
+            );
+
+            // Step 3: Comment if not already posted
+            if (!alreadyCommented) {
+              await github.rest.issues.createComment({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                issue_number: pr.number,
+                body: `Fixes #${matchedIssue.number}`
+              });
+            }
